[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/bcgGameOver.png" type="Texture" id=1]
[ext_resource path="res://Assets/Flag/jimmy.png" type="Texture" id=2]
[ext_resource path="res://Assets/buttonToClick.png" type="Texture" id=3]
[ext_resource path="res://Assets/happyTimmy.png" type="Texture" id=4]
[ext_resource path="res://Assets/Font/LapsusPro-Bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/GameOverScreen.gd" type="Script" id=6]
[ext_resource path="res://Assets/cursor.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Flag/FriendlyFlag.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Player/Cloud.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/SFX/GO.ogg" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=2]
script/source = "extends Node2D

export var text = \"\"
export (Texture) var textu = null
export var isCloud = true

func _ready():
	if (textu != null):
		$Sprite.texture_normal = textu
	$RichTextLabel.bbcode_text = \"[center]\" + text + \"[/center]\"
	$RichTextLabel.visible = false
	if (!isCloud):
		$RichTextLabel.rect_position = Vector2(-64,128)
	pass
	




func _on_Sprite_button_down():
	$RichTextLabel.visible = true
	pass # Replace with function body.


func _on_Sprite_button_up():
	$RichTextLabel.visible = false
	pass # Replace with function body.
"

[sub_resource type="DynamicFont" id=3]
size = 76
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[node name="GameOverScreen" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 824.0
margin_top = 2.74615
margin_right = 1024.0
margin_bottom = 194.746
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 776.0
margin_top = 168.0
margin_right = 1008.0
margin_bottom = 224.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] It is so hot today! [/center]"
text = " It is so hot today! "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cloud" parent="." instance=ExtResource( 9 )]
position = Vector2( 104, 352 )
text = "I am not Jimmy :( You should know, that I am Timmy!"
textu = ExtResource( 4 )
isCloud = false

[node name="Cloud2" parent="." instance=ExtResource( 9 )]
position = Vector2( 768, 400 )
script = SubResource( 2 )
text = "Why did not you pressed me earlier :("
textu = ExtResource( 3 )
isCloud = false

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 416.0
margin_top = 384.0
margin_right = 615.0
margin_bottom = 551.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 8.0
margin_right = 752.0
margin_bottom = 176.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] Congratulation!! [/center]"
text = " Congratulation!! "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 280.0
margin_top = 152.0
margin_right = 728.0
margin_bottom = 424.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] You did really well!
Thank you for playing my game.
If you want to have that much fun again, click on Jimmy! [/center]"
text = " You did really well!
Thank you for playing my game.
If you want to have that much fun again, click on Jimmy! "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Friends" type="Node2D" parent="."]

[node name="FriendlyFlag" parent="Friends" instance=ExtResource( 8 )]
position = Vector2( 114.422, 303.006 )

[node name="FriendlyFlag2" parent="Friends" instance=ExtResource( 8 )]
position = Vector2( 771.289, 66.7462 )

[node name="FriendlyFlag3" parent="Friends" instance=ExtResource( 8 )]
position = Vector2( 950.338, 370.812 )

[node name="MouseCursor" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
[connection signal="button_down" from="TextureButton2" to="." method="_on_TextureButton2_button_down"]
[connection signal="button_up" from="TextureButton2" to="." method="_on_TextureButton2_button_up"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
